apps/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-cloudflare
  namespace: media
spec:
  ingressClassName: cloudflare
  rules:
    - host: sonarr.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
